# wordle

./: .gitignore  AGENTS.md  DAYRUN_REPORT.md  EXPERIMENTS.dot  EXPERIMENT_MAP_SAMPLE.dot  EXPERIMENT_MAP_SAMPLE.md  OVERNIGHT_ANALYSIS.md  OVERNIGHT_REPORT_2.md  PRD.md  README.md  VALIDITY_REPORT.md  pyproject.toml  team_update.md
.agents/prompts/: review-rubrics.md
.claude/: settings.json
scripts/: ambiguity_diag.py  beam_decode.py  beam_eval.py  beam_search_eval.py  best_of_n_eval.py  bpe_wordle.py  build_experiment_map.py  cascade_diagnostic.py  clean_eval.py  constrained_decode_eval.py  cot.py  cot_50m.py  cot_50m_aux.py  cot_constraint.py  cot_ephemeral.py  cot_ephemeral_aux.py  cot_ephemeral_aux_clean.py  cot_ephemeral_aux_fair.py  cot_io_show.py  cot_show.py  cot_width.py  dagger.py  dagger_validity.py  dense_encode.py  distill_constrained.py  dpo_commit.py  dpo_decisive.py  dpo_fair.py  dpo_guessonly.py  ensemble_eval.py  eval_freegen.py  format_sweep.py  gen_games.py  green_anchor_eval.py  grpo_freegen.py  infer_show.py  infill_model.py  infogain_xit.py  iter_refine.py  live_viz.py  (+39 more)
src/wordle_slm/: cli.py  (+1 more)
tests/: test_baselines.py  test_benchmark.py  test_cli_run.py  test_config_resolve.py  test_constraints.py  test_curriculum.py  test_data.py  test_engine_scoring.py  test_game.py  test_grpo.py  test_phase0.py  test_phase1_eval.py  test_pretrain.py  test_reward.py  test_rollout.py  test_scorer.py  test_selection.py  test_serialization.py  test_sft.py  test_smoke.py  test_teacher.py  test_telemetry.py  test_tokenizer.py  test_tracer.py  test_transformer.py
(+113 files in other folders)
