[project]
name = "wordle-slm"
version = "0.1.0"
description = "Train a small language model from scratch with RL (GRPO) to play Wordle."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "tensorboard>=2.16",
]

[project.scripts]
wordle-slm = "wordle_slm.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wordle_slm"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["scripts"]  # experimental training drivers, not part of the package

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
